--- a/css/jquery.mdmenu.css
+++ b/css/jquery.mdmenu.css
@@ -68,6 +68,10 @@
 	box-shadow: inset -4px 0 8px -4px #DDD;
 }
 
+ul > li > ul {
+	display: none;
+}
+
 
 /* MEDIUM TO LARGE SCREENS */
 @media screen and (min-width: 768px) {
