--- a/css/jquery.mdmenu.css
+++ b/css/jquery.mdmenu.css
@@ -3,7 +3,7 @@
  */
 
 .navbar-default {
-	background-color: #f0f0f0;
+	background-color: #FAF7F2;;
 	border: none;
 }
 
@@ -58,7 +58,7 @@
 	margin-right: 0;
 	margin-left: 0;
 	border: none;
-	background-color: white;
+	background-color: transparent;
 	min-width: 250px;
 	width: auto;
 	top: 80px;
