--- a/style.css
+++ b/style.css
@@ -124,7 +124,6 @@ p {
 	font-size: 1.4rem;
 	color: #123321;
 	text-align: justify;
-	margin: 0;
 }
 
 a {
@@ -178,8 +177,8 @@ img {
 	box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2); }
 }
 
-.md-card-header {
-	border: 1px solid red;
+.md-card p {
+	margin: 0;
 }
 
 .md-card > .md-card-header,
