--- a/css/jquery.mdmenu.css
+++ b/css/jquery.mdmenu.css
@@ -3,7 +3,7 @@
  */
 
 .navbar-default {
-	background-color: #FAF7F2;;
+	background-color: transparent;
 	border: none;
 }
 
@@ -27,7 +27,8 @@
 }
 	
 .navbar-default .navbar-nav > li > a {
-	color: #3D72A4;
+	/*color: #3D72A4;*/
+	color: #777;
 	text-transform: uppercase;
 	font-size: 23px;
 	font-size: 2.3rem;
