--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 	Author: Corneliu Cirlan
 	Author URI: http://www.corneliucirlan.com
 	GitHub Theme URI: https://github.com/corneliucirlan/cornelius
-	Version: 3.0.1
-	Tags: responsive, light, material design, materialize, framework
+	Version: 3.1
+	Tags: responsive, light, material design, materialize, framework, parallax
 */
 
 
@@ -31,6 +31,17 @@ body {
 	flex: 1 0 auto;
 }
 
+.parallax-container {
+	margin-top: -64px;
+	height: 590px;
+}
+
+/*@media (max-width: 480px) {
+	.parallax-container {
+		height: 300px;
+	}
+}*/
+
 @font-face {
 	font-family: 'Oswald';
 	font-style: normal;
@@ -38,7 +49,7 @@ body {
 	src: local('Oswald Regular'), local('Oswald-Regular'), url(fonts/Oswald/Oswald-Regular.ttf) format('truetype');
 }
 
-img {
+.row img {
 	width: 100%;
 	height: auto;
 }
@@ -161,7 +172,7 @@ header nav ul a {
 header nav ul a:hover,
 header nav ul .current-menu-item a {
 	background: none;
-	color: #ccc;
+	color: black;
 }
 
 header .side-nav a {
@@ -193,7 +204,7 @@ header .side-nav a {
  */
 
 .breadcrumbs-container {
-	margin-bottom: 1rem;
+	margin: 1rem 0;
 }
 
 .breadcrumbs-container .breadcrumb {
