--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 	Author: Corneliu Cirlan
 	Author URI: http://www.corneliucirlan.com
 	GitHub Theme URI: https://github.com/corneliucirlan/cornelius
-	Version: 3.2
+	Version: 3.2.2
 	Tags: responsive, light, material design, materialize, framework, parallax
 */
 
@@ -23,13 +23,19 @@ body {
 	background-color: #f5f5f5;
 	font-size: 15px;
 	font-size: 2rem;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
     min-height: 100vh;
-    flex-direction: column;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 .main-container {
-	flex: 1 0 auto;
+	-webkit-flex: 1 0 auto;
+	    -ms-flex: 1 0 auto;
+	        flex: 1 0 auto;
 }
 
 @font-face {
@@ -187,13 +193,31 @@ header .side-nav a {
 	margin-top: -5rem;
 }
 
+.header-description {
+	position: absolute;
+	top: 30%;
+	left: 40%;
+	max-width: 60%;
+	color: #444;
+}
+
+.header-description p {
+	font-size: 2rem;
+}
+
+.header-title {
+	font-family: 'Oswald', 'Helvetica', 'Arial', 'sans-serif';
+	font-size: 4rem;
+	text-align: center;
+}
+
 
 /**
  * Breadcrunbs
  */
 
 .breadcrumbs-container {
-	margin: 1rem 0;
+	margin: 1rem 0 !important;
 }
 
 .breadcrumbs-container .breadcrumb {
@@ -223,8 +247,6 @@ header .side-nav a {
 }
 
 :after, :before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -339,6 +361,53 @@ header .side-nav a {
 
 
 /**
+ * Contact
+ */
+
+.contact-social {
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-justify-content: space-around;
+	-ms-flex-pack: distribute;
+    justify-content: space-around;
+	-webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+.contact-social .mail {
+	color: #444;
+	color: rgba(68, 68, 68, 1);
+}
+
+.contact-social .facebook {
+	color: #43609C;
+	color: rgba(62, 91, 153, 1);
+}
+
+.contact-social .twitter {
+	color: #1DA1F2;
+	color: rgba(29, 161, 242, 1);
+}
+
+.contact-social .google {
+	color: #DB4437;
+	color: rgba(219, 68, 55, 1);
+}
+
+.contact-social .github {
+	color: #333;
+	color: rgba(51, 51, 51, 1);
+}
+
+.contact-social .linkedin {
+	color: #1D87BD;
+	color: rgba(29, 135, 189, 1);
+}
+
+
+/**
  * Footer
  */
 
@@ -402,25 +471,7 @@ footer a:focus {
 	text-decoration: none;
 }
 
-footer .facebook:hover {
-	color: #43609C;
-	color: rgba(62, 91, 153, 1);
-}
 
-footer .twitter:hover {
-	color: #1DA1F2;
-	color: rgba(29, 161, 242, 1);
-}
-
-footer .google-plus:hover {
-	color: #DB4437;
-	color: rgba(219, 68, 55, 1);
-}
-
-footer .linkedin:hover {
-	color: #1D87BD;
-	color: rgba(29, 135, 189, 1);
-}
 
 footer.page-footer .footer-copyright {
 	padding-bottom: 2rem;
