--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 	Author: Corneliu Cirlan
 	Author URI: http://www.corneliucirlan.com
 	GitHub Theme URI: https://github.com/corneliucirlan/cornelius
-	Version: 3.2.2
+	Version: 3.2.3
 	Tags: responsive, light, material design, materialize, framework, parallax
 */
 
@@ -123,11 +123,19 @@ ul,
 	padding: 0 .7rem;
 }
 
-.waves-effect .waves-blue .waves-ripple {
+/*.btn, .btn-large {
+	background-color: #1976d2;
+}
+
+.btn:hover, .btn-large:hover {
+	background-color: #1976d2;
+}*/
+
+/*.waves-effect .waves-blue .waves-ripple {
 	background-color: #337AB7;
 	background-color: rgba(51, 122, 183, 0.65);
 	color: white;
-}
+}*/
 
 .offsite-title {
 	position: absolute;
@@ -365,6 +373,7 @@ header .side-nav a {
  */
 
 .contact-social {
+	margin-top: 3rem;
 	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
@@ -374,6 +383,10 @@ header .side-nav a {
 	-webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+}
+
+.contact-social li {
+	padding: 1rem;
 }
 
 .contact-social .mail {
@@ -391,7 +404,7 @@ header .side-nav a {
 	color: rgba(29, 161, 242, 1);
 }
 
-.contact-social .google {
+.contact-social .google-plus {
 	color: #DB4437;
 	color: rgba(219, 68, 55, 1);
 }
