--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -6,6 +6,12 @@ html
 body
 	font-size: 2rem
 	background-color: $background-color
+	display: flex
+	min-height: 100vh
+	flex-direction: column
+
+.main-container
+	flex: 1 0 auto
 
 .container
 	max-width: 100%
