Updated the front-page

--- a/sass/_bootstrap.sass
+++ b/sass/_bootstrap.sass
@@ -7,6 +7,8 @@
 // Core variables and mixins
 @import "../src/bootstrap/scss/variables"
 @import "../src/bootstrap/scss/mixins"
+@import "variables"
+
 
 // Reset and dependencies
 @import "../src/bootstrap/scss/normalize"
