--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -32,7 +32,7 @@
 //$gray-lighter:              #eceeef !default;
 //$gray-lightest:             #f7f7f9 !default;
 //
-//$brand-primary:             #0275d8 !default;
+$brand-primary:               #3d96cb
 //$brand-success:             #5cb85c !default;
 //$brand-info:                #5bc0de !default;
 //$brand-warning:             #f0ad4e !default;
@@ -208,9 +208,9 @@
 //$line-height-lg:         (4 / 3) !default;
 //$line-height-sm:         1.5 !default;
 
-//$border-radius:          .25rem !default;
-//$border-radius-lg:       .3rem !default;
-//$border-radius-sm:       .2rem !default;
+$border-radius:          0
+$border-radius-lg:       0
+$border-radius-sm:       0
 
 //$component-active-color: #fff !default;
 //$component-active-bg:    $brand-primary !default;
@@ -244,8 +244,8 @@
 //$btn-font-weight:                normal !default;
 
 //$btn-primary-color:              #fff !default;
-//$btn-primary-bg:                 $brand-primary !default;
-//$btn-primary-border:             $btn-primary-bg !default;
+$btn-primary-bg:                   $brand-primary
+$btn-primary-border:               $btn-primary-bg
 
 //$btn-secondary-color:            $gray-dark !default;
 //$btn-secondary-bg:               #fff !default;
@@ -276,9 +276,9 @@
 //$btn-padding-y-lg:               .75rem !default;
 
 // Allows for customizing button radius independently from global border radius
-//$btn-border-radius:              $border-radius !default;
-//$btn-border-radius-lg:           $border-radius-lg !default;
-//$btn-border-radius-sm:           $border-radius-sm !default;
+$btn-border-radius:              $border-radius
+$btn-border-radius-lg:           $border-radius-lg
+$btn-border-radius-sm:           $border-radius-sm
 
 
 // Forms
@@ -373,7 +373,7 @@
 //$navbar-dark-active-color:          rgba(255,255,255,1) !default;
 //$navbar-dark-disabled-color:        rgba(255,255,255,.25) !default;
 
-//$navbar-light-color:                rgba(0,0,0,.3) !default;
+$navbar-light-color:                  #444;
 //$navbar-light-hover-color:          rgba(0,0,0,.6) !default;
 //$navbar-light-active-color:         rgba(0,0,0,.8) !default;
 //$navbar-light-disabled-color:       rgba(0,0,0,.15) !default;
@@ -624,7 +624,7 @@
 //$breadcrumb-padding-vertical:   .75rem !default;
 //$breadcrumb-padding-horizontal: 1rem !default;
 
-//$breadcrumb-bg:                 $gray-lighter !default;
+$breadcrumb-bg:                   transparent
 //$breadcrumb-divider-color:      $gray-light !default;
 //$breadcrumb-active-color:       $gray-light !default;
 //$breadcrumb-divider:            "/" !default;
