--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,29 +12,17 @@
 // Bootstrap
 @import "bootstrap"
 
-// Variables
-//@import "variables"
+// Font Awesome
+@import "font-awesome"
 
 // Fonts
-//@import "fonts"
+@import "fonts"
 
 // General
-//@import "general"
+@import "general"
 
-// Header
-//@import "header"
+// Navbar
+@import "navbar"
 
-// Breadcrumbs
-//@import "breadcrumbs"
-
-// Frontpage
-//@import "frontpage"
-
-// Cards
-//@import "card"
-
-// Contact
-//@import "contact"
-
-// Footer
-//@import "footer"
+// Btn
+@import "btn"
