--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,16 +13,22 @@
 @import "bootstrap"
 
 // Font Awesome
-@import "font-awesome"
+//@import "font-awesome"
 
 // Fonts
 @import "fonts"
 
 // General
-@import "general"
+@import "base"
+
+// Social
+@import "social"
 
 // Navbar
 @import "navbar"
 
 // Btn
 @import "btn"
+
+// Footer
+@import "footer"
