--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -1,12 +1,40 @@
 footer
-	background-color: #444
+	background-color: $gray-dark
+	margin-top: 2rem
+	padding: 1rem
+	color: $gray-light
+	text-align: center
+
+	.container-fluid
+		width: 100%
 
 	.footer-menu
 		li
-			float: left
-			width: calc(100%/6)
+			width: 100%
 			text-align: center
-			margin-bottom: 1rem
+			padding: 0
+			line-height: $line-height * 1.4
+
+			a
+				font-size: 1rem
+
+	a
+		color: $gray-lighter
+		font-weight: bold
+		transition: ease-in-out .1s
+
+		&:hover, &:active, &:focus
+			color: $gray
+			text-decoration: none
+
+	ul
+		list-style: none
+		overflow: hidden
+		margin-bottom: 0
+		padding: 0
+
+	.footer-subtitle
+		color: white
 
 	.footer-follow-us
 		list-style: none
@@ -18,69 +46,20 @@ footer
 			width: 25%
 			text-align: center
 
-	.footer-copyright
-		font-size: 1.5rem
-		padding-bottom: 2rem
-		color: white
-
-	p, a
-		color: rgba(200, 200, 200, 1)
-
-	p
-		text-align: center
-
-	a
-		font-weight: bold
-		transition: ease-in-out .1s
-
-		&:hover, &:active, &:focus
-			color: rgba(255, 255, 255, 1)
-			text-decoration: none
-
-	ul
-		overflow: hidden
-		margin-bottom: 0
-
-	.footer-subtitle
-		color: white
-
-	.facebook:hover
-		color: rgba(62, 91, 153, 1)
-
-	.twitter:hover
-		color: rgba(29, 161, 242, 1)
-
-	.google-plus:hover
-		color: rgba(219, 68, 55, 1)
-
-	.linkedin:hover
-		color: rgba(29, 135, 189, 1)
-
-@media (max-width: $maxPhone)
+// small to medium screens
+@include media-breakpoint-up(sm)
 	footer
-		.container
-			width: 100%
-
 		.footer-menu li
-			width: 100%
+			width: calc(100%/3)
+			float: left
 			text-align: center
 
-			a
-				font-size: 2rem
-
-@media (min-width: 481px) and (max-width: $minDesktop)
-	footer
-		.container
-			width: 100%
-
-		.footer-menu
-			width: 100%
-
-			li
-				float: left
-				width: calc(100%/5)
-				text-align: center
-
-@media (min-width: 992px) and (max-width: 1600px)
+// medium screens
+@include media-breakpoint-up(md)
 	footer .footer-menu li
 		width: calc(100%/3)
+
+// large screens
+@include media-breakpoint-up(lg)
+	footer .footer-menu li
+		width: calc(100%/6)
