--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -85,7 +85,7 @@ $brand-primary:               #3d96cb
 //
 // Settings for the `<body>` element.
 
-//$body-bg:                    #fff !default;
+$body-bg:                    #f5f5f5
 //$body-color:                 $gray-dark !default;
 
 
@@ -208,9 +208,9 @@ $brand-primary:               #3d96cb
 //$line-height-lg:         (4 / 3) !default;
 //$line-height-sm:         1.5 !default;
 
-$border-radius:          0
-$border-radius-lg:       0
-$border-radius-sm:       0
+//$border-radius:          .25rem !default;
+//$border-radius-lg:       .3rem !default;
+//$border-radius-sm:       .2rem !default;
 
 //$component-active-color: #fff !default;
 //$component-active-bg:    $brand-primary !default;
@@ -276,9 +276,9 @@ $btn-primary-border:               $btn-primary-bg
 //$btn-padding-y-lg:               .75rem !default;
 
 // Allows for customizing button radius independently from global border radius
-$btn-border-radius:              $border-radius
-$btn-border-radius-lg:           $border-radius-lg
-$btn-border-radius-sm:           $border-radius-sm
+//$btn-border-radius:              $border-radius !default;
+//$btn-border-radius-lg:           $border-radius-lg !default;
+//$btn-border-radius-sm:           $border-radius-sm !default;
 
 
 // Forms
