--- a/sass/_bootstrap.sass
+++ b/sass/_bootstrap.sass
@@ -32,7 +32,7 @@
 //@import "../src/bootstrap/scss/custom-forms"
 @import "../src/bootstrap/scss/nav"
 @import "../src/bootstrap/scss/navbar"
-//@import "../src/bootstrap/scss/card"
+@import "../src/bootstrap/scss/card"
 @import "../src/bootstrap/scss/breadcrumb"
 //@import "../src/bootstrap/scss/pagination"
 //@import "../src/bootstrap/scss/pager"
@@ -52,7 +52,7 @@
 //@import "../src/bootstrap/scss/carousel"
 
 // Utility classes
-//@import "../src/bootstrap/scss/utilities"
+@import "../src/bootstrap/scss/utilities"
 //@import "../src/bootstrap/scss/utilities-background"
-//@import "../src/bootstrap/scss/utilities-spacing"
-//@import "../src/bootstrap/scss/utilities-responsive"
+@import "../src/bootstrap/scss/utilities-spacing"
+@import "../src/bootstrap/scss/utilities-responsive"
