--- a/sass/modules/_breadcrumbs.sass
+++ b/sass/modules/_breadcrumbs.sass
@@ -1,5 +1,6 @@
 .breadcrumbs-container
 	margin: 1rem 0
+	border: 1px solid red
 
 .breadcrumb
 	background: transparent
@@ -12,7 +13,6 @@
 		display: inline-block
 		font-size: 1.4rem
 
-		//&+&:before
 		&:before
 			padding: 0 5px
 			color: #ccc
