--- a/sass/style.sass
+++ b/sass/style.sass
@@ -15,20 +15,19 @@
 // Font Awesome
 //@import "font-awesome"
 
-// Fonts
-@import "fonts"
-
 // General
 @import "base"
 
-// Social
-@import "social"
+// Modules
+@import "modules/fonts"
+@import "modules/typography"
+@import "modules/header"
+@import "modules/social"
+@import "modules/navbar"
+@import "modules/buttons"
+@import "modules/card"
+@import "modules/footer"
+@import "modules/inputs"
 
-// Navbar
-@import "navbar"
-
-// Btn
-@import "btn"
-
-// Footer
-@import "footer"
+// Pages
+@import "pages/page-contact"
