--- a/sass/modules/_header.sass
+++ b/sass/modules/_header.sass
@@ -1,7 +1,5 @@
 header
 	nav
-		//border: 1px solid red
-		color: $body-bg
 		background-color: transparent
 		padding: 0
 		margin: 0
@@ -32,39 +30,30 @@ header
 			// Menu
 			.navbar-nav
 				position: absolute
-				display: none
-				max-width: 70%
+				max-width: 13rem
 				width: 100%
 				background-color: white
-				left: -70%
+				left: -13rem
 				top: 0
 				height: 100vh
 				transition: all .2s ease-in-out
 				box-shadow: 3px 0 3px rgba(0, 0, 0, 0.2)
+				z-index: 1050
 
 				.nav-item
 					display: block
 					width: 100%
 					margin: 0
-					padding: 0 1.5rem
-					border-bottom: 1px solid $gray-lighter
+					padding: .5rem 2rem
+					border-bottom: 1px solid $gray-lightest
 
 					a
 						font-size: 1rem
 
 
 .fixed-top
-	background-color: #fff
 	background-color: rgba(255, 255, 255, 0.9)
 	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)
-
-
-// small to medium screens
-//@include media-breakpoint-up(sm)
-
-
-// medium screens
-//@include media-breakpoint-up(md)
 
 // large screens
 @include media-breakpoint-up(lg)
@@ -79,18 +68,19 @@ header
 
 				.navbar-nav
 					position: relative
-					display: block
-					height: 100%
-					box-shadow: none
-					background-color: transparent
 					left: 0
 					top: 5px
 					flex: 1
+					max-width: 100%
+					width: 100%
+					max-height: 50px
+					height: 100%
+					box-shadow: none
+					background-color: transparent
 
 					.nav-item
 						float: left
 						width: auto
-						height: 100%
 						padding: .4rem 0
 						margin-left: 1.5rem
 						border-bottom: 0
