--- a/sass/pages/_page-frontpage.sass
+++ b/sass/pages/_page-frontpage.sass
@@ -1,9 +1,28 @@
-.frontpage-button
-	text-align: center
-
-@media (max-width: $maxPhone)
+.page-frontpage
 	.frontpage-button
 		margin-bottom: 2rem
 
 		&:last-child
 			margin-bottom: 0
+
+		.btn-primary
+			display: block
+			width: 100%
+			margin: 0 auto
+
+// small to medium screens
+//@include media-breakpoint-up(sm)
+
+// medium screens
+@include media-breakpoint-up(md)
+	.page-frontpage
+		.frontpage-button
+			.btn-primary
+				width: 90%
+
+// large screens
+@include media-breakpoint-up(lg)
+	.page-frontpage
+		.frontpage-button
+			.btn-primary
+				width: 80%
