--- a/style.css
+++ b/style.css
@@ -3567,7 +3567,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header nav {
-  color: #f5f5f5;
   background-color: transparent;
   padding: 0;
   margin: 0;
@@ -3606,23 +3605,23 @@ header nav .container-fluid .header-social {
 
 header nav .container-fluid .navbar-nav {
   position: absolute;
-  display: none;
-  max-width: 70%;
+  max-width: 13rem;
   width: 100%;
   background-color: white;
-  left: -70%;
+  left: -13rem;
   top: 0;
   height: 100vh;
   transition: all .2s ease-in-out;
   box-shadow: 3px 0 3px rgba(0, 0, 0, 0.2);
+  z-index: 1050;
 }
 
 header nav .container-fluid .navbar-nav .nav-item {
   display: block;
   width: 100%;
   margin: 0;
-  padding: 0 1.5rem;
-  border-bottom: 1px solid #eceeef;
+  padding: .5rem 2rem;
+  border-bottom: 1px solid #f7f7f9;
 }
 
 header nav .container-fluid .navbar-nav .nav-item a {
@@ -3630,7 +3629,6 @@ header nav .container-fluid .navbar-nav .nav-item a {
 }
 
 .fixed-top {
-  background-color: #fff;
   background-color: rgba(255, 255, 255, 0.9);
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
@@ -3647,20 +3645,21 @@ header nav .container-fluid .navbar-nav .nav-item a {
   }
   header nav .container-fluid .navbar-nav {
     position: relative;
-    display: block;
-    height: 100%;
-    box-shadow: none;
-    background-color: transparent;
     left: 0;
     top: 5px;
     -webkit-flex: 1;
         -ms-flex: 1;
             flex: 1;
+    max-width: 100%;
+    width: 100%;
+    max-height: 50px;
+    height: 100%;
+    box-shadow: none;
+    background-color: transparent;
   }
   header nav .container-fluid .navbar-nav .nav-item {
     float: left;
     width: auto;
-    height: 100%;
     padding: .4rem 0;
     margin-left: 1.5rem;
     border-bottom: 0;
@@ -3671,20 +3670,17 @@ header nav .container-fluid .navbar-nav .nav-item a {
 }
 
 .social-icons {
+  width: 100%;
   list-style: none;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-justify-content: space-around;
-      -ms-flex-pack: distribute;
-          justify-content: space-around;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+  display: block;
+  position: relative;
+  overflow: hidden;
+  padding: 0;
 }
 
 .social-icons li {
-  min-width: 3rem;
+  float: left;
+  width: calc(100%/5);
   text-align: center;
   padding: 1rem;
   color: inherit;
@@ -3692,6 +3688,7 @@ header nav .container-fluid .navbar-nav .nav-item a {
 
 .social-icons li a {
   color: inherit;
+  transition: all 0.2s ease-in-out;
 }
 
 .facebook:hover {
@@ -3708,6 +3705,30 @@ header nav .container-fluid .navbar-nav .nav-item a {
 
 .linkedin:hover {
   color: #1d87bd;
+}
+
+@media (min-width: 768px) {
+  .social-icons {
+    width: 100%;
+    list-style: none;
+    position: relative;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+  }
+  .social-icons li {
+    min-width: 3rem;
+    width: auto;
+    text-align: center;
+    padding: 1rem;
+    color: inherit;
+  }
 }
 
 .navbar-nav .nav-link {
@@ -3865,6 +3886,32 @@ footer .footer-follow-us li {
 .form-control:active, .form-control:hover, .form-control:focus {
   box-shadow: 0px 0px 10px #3d96cb;
   border: 1px solid #3d96cb;
+}
+
+.page-frontpage .frontpage-button {
+  margin-bottom: 2rem;
+}
+
+.page-frontpage .frontpage-button:last-child {
+  margin-bottom: 0;
+}
+
+.page-frontpage .frontpage-button .btn-primary {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+  .page-frontpage .frontpage-button .btn-primary {
+    width: 90%;
+  }
+}
+
+@media (min-width: 992px) {
+  .page-frontpage .frontpage-button .btn-primary {
+    width: 80%;
+  }
 }
 
 .page-contact .page-contact-social .social-icons {
