--- a/sass/modules/_card.sass
+++ b/sass/modules/_card.sass
@@ -1,22 +1,25 @@
 .card-columns
 	column-count: 1
+	text-align: center
 
-.card
-	border: none
-	border-radius: 0
-	box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4)
+	.card
+		width: calc(100% - 1rem)
+		border: none
+		border-radius: 0
+		text-align: left
+		box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4)	
 
-	.card-title
-		font-family: "Oswald", "sans-serif"
+		.card-title
+			font-family: "Oswald", "sans-serif"
 
-	img
-		width: calc(100%)
-		height: auto
-		margin: 0 -1.25rem
+		img
+			width: calc(100% + 2.5rem)
+			height: auto
+			margin: 0 -1.25rem
 
-	footer
-		background: $gray-lighter
-		margin-top: 0
+		footer
+			background: $gray-lighter
+			margin-top: 0
 
 // small to medium screens
 @include media-breakpoint-up(sm)
